# hub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  Dockerfile.gateway  Dockerfile.migrate  Dockerfile.worker  README.md  docker-compose.yml
backend/: main.py  pyproject.toml  worker.py
backend/hub/: __init__.py  cards.py  config.py  database.py  error_codes.py  messages.py  metrics.py  permissions.py  seed.py  worker_runtime.py
backend/hub/adapters/: __init__.py
backend/hub/agent/: __init__.py  chain_agent.py  context_builder.py  llm_client.py  types.py
backend/hub/auth/: __init__.py  admin_key.py  admin_perms.py  bootstrap_token.py  erp_session.py
backend/hub/capabilities/: __init__.py  deepseek.py  factory.py  qwen.py
backend/hub/circuit_breaker/: __init__.py  erp_breaker.py
backend/hub/cron/: __init__.py  budget_alert.py  dingtalk_user_client.py  dingtalk_user_sync.py  draft_reminder.py  jobs.py  scheduler.py  task_payload_cleanup.py
backend/hub/crypto/: __init__.py  aes_gcm.py  hkdf.py
backend/hub/handlers/: __init__.py  dingtalk_inbound.py  dingtalk_outbound.py
backend/hub/intent/: __init__.py  chain_parser.py  llm_parser.py  rule_parser.py
backend/hub/lifecycle/: __init__.py  dingtalk_connect.py
backend/hub/match/: __init__.py  conversation_state.py  resolver.py
backend/hub/models/: __init__.py  audit.py  bootstrap.py  cache.py  config.py  consumed_token.py  contract.py  conversation.py  draft.py  identity.py  memory.py  rbac.py
backend/hub/observability/: __init__.py  live_stream.py  task_logger.py  tool_logger.py
backend/hub/ports/: __init__.py  capability_provider.py  channel_adapter.py  downstream_adapter.py  intent_parser.py  pricing_strategy.py  task_runner.py
backend/hub/queue/: __init__.py  redis_streams.py
backend/hub/routers/: __init__.py  health.py  internal_callbacks.py  setup.py  setup_full.py
backend/hub/runtime/: __init__.py  dingtalk_bootstrap.py
backend/hub/seeds/: contract_template_sales_v1.docx
backend/hub/services/: __init__.py  binding_service.py  erp_active_cache.py  identity_service.py
backend/hub/strategy/: __init__.py  pricing.py
backend/hub/usecases/: __init__.py  query_customer_history.py  query_product.py
backend/migrations/models/: 0_20260428174946_init.py  2_20260430000000_plan6_agent_tables.py  (+5 more)
backend/tests/: conftest.py  test_admin_ai_providers.py  test_admin_approvals.py  test_admin_audit.py  test_admin_channels.py  test_admin_contract_templates.py  test_admin_conversation_history.py  test_admin_conversation_live.py  test_admin_dashboard.py  test_admin_downstreams.py  test_admin_key_auth.py  test_admin_perms.py  test_admin_system_config.py  test_admin_tasks.py  test_admin_tasks_with_agent.py  test_admin_users.py  test_agent_llm_client.py  test_analyze_tools.py  test_binding_service.py  test_bootstrap_token.py  test_budget_alert_cron.py  test_chain_agent.py  test_chain_parser.py  test_config.py  test_context_builder.py  test_conversation_state.py  test_cron_jobs.py  test_cron_scheduler.py  test_crypto_aes_gcm.py  test_crypto_hkdf.py  test_dashboard_with_agent.py  test_deepseek_provider.py  test_dingtalk_bootstrap.py  test_dingtalk_connect.py  test_dingtalk_inbound_handler.py  test_dingtalk_outbound_handler.py  test_dingtalk_sender.py  test_dingtalk_sender_file.py  test_dingtalk_stream_adapter.py  test_dingtalk_user_client.py  (+41 more)
(+298 files in other folders)
